--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.medvedya.select_implementation_property_drawer": "https://github.com/medvedya/Select-implementation-property-drawer.git",
     "com.unity.ide.visualstudio": "2.0.20",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
